# pylox

./: main.py  pyproject.toml  test.lox
src/pylox/: ast_printer.py  errors.py  expr.py  interpreter.py  main.py  parser.py  scanner.py  stmt.py
src/pylox/tokens/: __init__.py  token.py  token_type.py
